fix: gaps and spaces

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -5932,11 +5932,6 @@ details.collapse summary::-webkit-details-marker {
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-\[0px_-4px_20px_0px_\#3B3B3B26\] {
-  --tw-shadow: 0px -4px 20px 0px #3B3B3B26;
-  --tw-shadow-colored: 0px -4px 20px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .shadow-\[0px_2px_10px_0px_\#3B3B3B1A\] {
   --tw-shadow: 0px 2px 10px 0px #3B3B3B1A;
   --tw-shadow-colored: 0px 2px 10px 0px var(--tw-shadow-color);
@@ -6883,6 +6878,10 @@ details.collapse summary::-webkit-details-marker {
 
   .desk\:gap-20 {
     gap: 5rem;
+  }
+
+  .desk\:gap-4 {
+    gap: 1rem;
   }
 
   .desk\:gap-5 {
